k8s/chat-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-service
  namespace: microservices
spec:
  replicas: 3
  selector:
    matchLabels:
      app: chat-service
  template:
    metadata:
      labels:
        app: chat-service
    spec:
      containers:
        - name: chat-service
          image: nguyentanthanh0709/chat-service:latest
          ports:
            - containerPort: 8181
---

apiVersion: v1
kind: Service
metadata:
  name: chat-service
  namespace: microservices
spec:
  selector:
    app: chat-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8181
