k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: microservices
spec:
  selector:
    matchLabels:
      app: mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-pv
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-pv
        emptyDir: {}   # Dùng EmptyDir demo local, production thì xài PVC (PersistentVolumeClaim)

---

apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: microservices
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
