k8s/redis-deployment.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: microservices
  labels:
    app: redis
spec:
  serviceName: "redis"
  replicas: 1
  selector:
    matchLabels:
      app: redis

  template:
    metadata:
      labels:
        app: redis

    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: redis
          image: redis:7
          command: ["redis-server"]  # Có thể bỏ vì là mặc định
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-data
              mountPath: /mnt/redis/data
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-data-pvc
      resources:
        requests:
          cpu: "100m"
          memory: "256Mi"
        limits:
          cpu: "300m"
          memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: microservices
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
