k8s/socket-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socket-service
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: socket-service
  template:
    metadata:
      labels:
        app: socket-service
    spec:
      containers:
        - name: socket-service
          image: nguyentanthanh0709/socket-service:latest
          ports:
            - containerPort: 8182
      resources:
        limits:
          memory: 512Mi
          cpu: 500m
        requests:
          memory: 256Mi
          cpu: 200m

---

apiVersion: v1
kind: Service
metadata:
  name: socket-service
  namespace: microservices
spec:
  selector:
    app: socket-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8182
