k8s/webchat-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: webchat
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webchat
  template:
    metadata:
      labels:
        app: webchat
    spec:
      containers:
        - name: webchat
          image: nguyentanthanh0709/webchat:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /usr/share/nginx/html/env-config.js
              subPath: env-config.js
          resources:
              limits:
                memory: 512Mi
                cpu: 400m
              requests:
                memory: 256Mi
                cpu: 200m
      volumes:
        - name: config-volume
          configMap:
            name: webchat-config

---

apiVersion: v1
kind: Service
metadata:
  name: webchat-service
  namespace: microservices
spec:
  selector:
    app: webchat
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
