k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: microservices
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/user(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - path: /api/chat(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  number: 80
          - path: /api/socket(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: socket-service
                port:
                  number: 80
